Updated the dependencies. Fixed some typos. Fixed minor warnings.